--- a/studere_ved_kyushu_outline.org
+++ b/studere_ved_kyushu_outline.org
@@ -89,15 +89,6 @@
    og snakke med legen din angående vaksiner osv.
 
    Les gjerne mer om dette for oppdatert informasjon på [[https://www.regjeringen.no/no/tema/utenrikssaker/reiseinformasjon/velg-land/reiseinfo_japan/id2415973/][ud's hjemmesider]].
-
-   Denguefeber - Sykdom spredd av mygg. Jeg fikk opplysning om å beskytte
-   meg mot denne sykdommen før jeg reiste. Forebyggende tiltak er rett og 
-   slett å unngå å bli stukket av mygg. I skrivende stund har jeg ikke 
-   hatt noe særlig problemer med dette. Du kan lese mer om denguefeber på
-   [[https://www.fhi.no/nettpub/smittevernveilederen/sykdommer-a-a/denguefeber/][fhi's hjemmesider]].
-
-   Japansk encefalitt - En type hjernehinnebetennelse spredd av mygg. 
-   Forebyggende tiltak er vaksinasjon.
 *** Vaksiner
     Oppdatert informasjon om vaksiner finner du [[https://www.fhi.no/sv/vaksine/reisevaksiner/verden/vaksiner-ved-reise-til-asia/][her]].
     Du vil måtte ta vaksinene for gurppe II. Dersom du ikke har fått 
@@ -117,6 +108,15 @@
     Men, den kan også gis i hurtigregime. Da tar prosessen rundt 1 måned, og 
     du kan ta den 4 dosen når du kommer hjem etter 1 år (dersom du ønsker å 
     en langtidsvirkende vaksine.) se [[https://www.fhi.no/nettpub/vaksinasjonsveilederen/vaksiner-mot-de-enkelte-sykdommene/hepatitt-b-vaksinasjon-og-hepatitt-/][Tabell 4]].
+*** Sykdommer som kan forekomme
+   Denguefeber - Sykdom spredd av mygg. Jeg fikk opplysning om å beskytte
+   meg mot denne sykdommen før jeg reiste. Forebyggende tiltak er rett og 
+   slett å unngå å bli stukket av mygg. I skrivende stund har jeg ikke 
+   hatt noe særlig problemer med dette. Du kan lese mer om denguefeber på
+   [[https://www.fhi.no/nettpub/smittevernveilederen/sykdommer-a-a/denguefeber/][fhi's hjemmesider]].
+
+   Japansk encefalitt - En type hjernehinnebetennelse spredd av mygg. 
+   Forebyggende tiltak er vaksinasjon.
 ** Forsikring
    Dersom du skal være lenger i Japan enn 3 måneder, må du melde deg inn i
    Japans nasjonale helseforsikring. Dette kan du få hjelp ved enten når 
