la til spraakkurs og mer info om visum

--- a/studere_ved_kyushu_outline.org
+++ b/studere_ved_kyushu_outline.org
@@ -90,7 +90,27 @@
 
     Hjemmesiden til [[http://www.no.emb-japan.go.jp/itprtop_nb/index.html][Japans ambassade i Norge]]
 
+    Beboere i Norge kan komme til Japan uten å søke om turistvisum før de reiser, 
+    du får det når du ankommer immigrasjonen. Du kan da være i Japan i inntil 3 
+    måneder på dette visumet før du må reise ut. 
+
+    Hvis du mot all formodning ikke skulle få søkt om visum før du reiser, kan 
+    du fortsatt søke om å skifte status fra turistvisum til langtids visum etter 
+    at du har ankommet Japan. 
     
+    Vær obs på at å skifte fra turistvisum til langtids studentvisum er svært uvanlig,
+    og fører til en del ekstra arbeid. Heldigvis fikk jeg hjelp av en på labben som 
+    hadde vært gjennom det samme.
+** Språkkurs
+   Jeg vil absolutt anbefale å bruke tiden før du reiser/den første tiden du er 
+   her til å lære litt grunnleggende Japansk. 
+   Selv meldte jeg meg av eget initiativ på et meget godt kurs som ble holdt ved 
+   Kwansei Gakuin University. 
+
+   Du kan få noe av det du betaler for språkkurs dekket av lånekassen. Du må da 
+   være påpasselig med at kurset går over mer enn 4 uker for å kvalifisere. 
+   Dessverre varte kurset på Kwansei bare i 3 uker. Kyushu Arrangerer også 
+   språkkurs, men de har ganske tidlig søknadsfrist.
 ** Helse
    OBS! Dette dokumentet er ikke skrevet av kvalifisert helsepersonell, 
    og er kun ment til orientering for at du skal kunne planlegge tiden 
