la til research plan

--- a/studere_ved_kyushu_outline.org
+++ b/studere_ved_kyushu_outline.org
@@ -37,6 +37,11 @@
     Japan". "Sponsor's name" vil være "Norwegian Research Council/University 
     of Oslo" dersom du deltar i COINMAC samarbeidet.
     Du trenger ikke å fylle ut noe mer enn dette under "Financial support".
+*** Research plan
+    Dette er også et dokument du vil få når du først kommer i kontakt med 
+    Universitetet. Ganske enkelt kan du beskrive hva masteroppgaven din 
+    går ut på. Hvis du må ta fag mens du er i Japan tenker jeg dette også 
+    er relevant å skrive i dette dokumentet.
 *** Passfoto
     Du vil trenge et passfoto som er tatt for ikke lenger enn 6 måneder siden.
     Print gjerne ut 5-6 stykker da du vil få bruk for dem til studentkort o.l.
