--- a/studere_ved_kyushu_outline.org
+++ b/studere_ved_kyushu_outline.org
@@ -126,12 +126,12 @@
 
    Les gjerne mer om dette for oppdatert informasjon på [[https://www.regjeringen.no/no/tema/utenrikssaker/reiseinformasjon/velg-land/reiseinfo_japan/id2415973/][ud's hjemmesider]].
 *** Vaksiner
-    Oppdatert informasjon om vaksiner finner du [[https://www.fhi.no/sv/vaksine/reisevaksiner/verden/vaksiner-ved-reise-til-asia/][her]].
+    Oppdatert informasjon om vaksiner finner du hos [[https://www.fhi.no/sv/vaksine/reisevaksiner/verden/vaksiner-ved-reise-til-asia/][fokehelseinstituttet]].
     Du vil måtte ta vaksinene for gruppe II. Dersom du ikke har fått 
     påfyll av barnevaksinene bør du få påfyll av disse også, da det er anbefalt
     å ta dem rundt hvert tiende år. (disse er dTP-IPV og muligens TBE.)
 
-    Du kan sjekke hvilke vaksiner du har tatt og når du tok dem [[https://helsenorge.no/vaksiner/mine-vaksiner][her]].
+    Du kan sjekke hvilke vaksiner du har tatt og når du tok dem hos [[https://helsenorge.no/vaksiner/mine-vaksiner][mine vaksiner]].
 
     Videre er de nye vaksinene du eventuelt trenger Japansk encefalitt og 
     Hepatitt-B vaksine. Disse kan du bestille hos [[https://www.sio.no/helse/reisevaksine][SiO's reisevaksinasjon]]. 
