some better structure

--- a/studere_ved_kyushu_outline.org
+++ b/studere_ved_kyushu_outline.org
@@ -170,9 +170,8 @@
    Forebyggende tiltak er vaksinasjon.
 ** Forsikring
    Dersom du skal være lenger i Japan enn 3 måneder, må du melde deg inn i
-   Japans nasjonale helseforsikring. Dette kan du få hjelp ved enten når 
-   du søker om visum ved ambassaden i Japan, eller ved helpesenteret når du
-   kommer til universitetet. 
+   Japans nasjonale helseforsikring. Dette kan du få hjelp til enten enten når
+   du søker om visum ved ambassaden, eller ved hjelpesenteret når du ankommer.
 
    Det er også anbefalt å melde seg inn i ansa, eller en lignende organisasjon,
    og kjøpe deres [[http://www.ansa.no/Forsikring/][studentforsikring]].
